-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
None
QScreen::refreshRate() always returns 60 with eglfs and linuxfb. We should at least attempt to calculate the refresh rate for eglfs from the framebuffer query results (like for instance Weston does). It won't work on all devices, but may help some.
For the KMS backend proper support can easily be added since the refresh rate is always available.
The main issue is that Qt Quick relies on the refresh rate for its animation timer and therefore Quick apps will be capped to 60 frames on 75 Hz screens.