src/plugins/platforms/eglfs/qeglfsdeviceintegration.h
@@ -184,6 +184,12 @@ argument_list|()
 specifier|const
 expr_stmt|;
 name|virtual
+name|qreal
+name|refreshRate
+argument_list|()
+specifier|const
+expr_stmt|;
+name|virtual
 name|QSurfaceFormat
 name|surfaceFormatFor
 argument_list|(
